--- a/src/Main_Pages/style.css
+++ b/src/Main_Pages/style.css
@@ -285,7 +285,24 @@ footer {
   border:0.5px solid rgb(8, 8, 8);
 }
 
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; 
+}
 
+.loading-animation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 
 @media only screen and (max-width: 1200px)
